<resources>
    <string name="app_name">BettrHelp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_back">Arrow Back</string>
    <string name="mood">Mood</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="emoji_great">Emoji Great</string>
    <string name="great">Great</string>
    <string name="emoji_good">Emoji Good</string>
    <string name="good">Good</string>
    <string name="emoji_okay">Emoji Okay</string>
    <string name="okay">Okay</string>
    <string name="emoji_not_okay">Emoji Not Okay</string>
    <string name="emoji_bad">Emoji Bad\n</string>
    <string name="bad">Bad</string>
    <string name="not_okay">Not Okay</string>
    <string name="next">Next</string>
    <string name="stress_level">Stress Level</string>
    <string name="energy_level">Energy Level</string>
    <string name="what_have_you_done">What have you done?</string>
    <string name="emotions">Emotions</string>
    <string name="emo_happy">Emo Happy</string>
    <string name="happy">Happy</string>
    <string name="emo_relaxed">Emo Relaxed</string>
    <string name="relaxed">Relaxed</string>
    <string name="emo_excited">Emo Excited</string>
    <string name="excited">Excited</string>
    <string name="emo_enthusiastic">TODO</string>
    <string name="enthusiastic">Enthusiastic</string>
    <string name="emo_calm">Emo Calm</string>
    <string name="calm">Calm</string>
    <string name="emo_grateful">Emo Grateful</string>
    <string name="grateful">Grateful</string>
    <string name="emo_hopeful">Emo Hopeful</string>
    <string name="hopeful">Hopeful</string>
    <string name="emo_proud">Emo Proud</string>
    <string name="proud">Proud</string>
    <string name="emo_sad">Emo Sad</string>
    <string name="sad">Sad</string>
    <string name="emo_anxious">Emo Anxious</string>
    <string name="anxious">Anxious</string>
    <string name="emo_pressured">Emo Pressured</string>
    <string name="pressured">Pressured</string>
    <string name="emo_stressed">Emo Stressed</string>
    <string name="stressed">Stressed</string>
    <string name="emo_angry">Emo Angry</string>
    <string name="angry">Angry</string>
    <string name="emo_lonely">Emo Lonely</string>
    <string name="lonely">Lonely</string>
    <string name="emo_tired">Emo Tired</string>
    <string name="tired">Tired</string>
    <string name="emo_annoyed">Emo Annoyed</string>
    <string name="annoyed">Annoyed</string>
    <string name="events">Events</string>
    <string name="eve_home">Eve Home</string>
    <string name="home">Home</string>
    <string name="eve_school">Eve School</string>
    <string name="school">School</string>
    <string name="eve_restaurant">Eve Restaurant</string>
    <string name="restaurant">Restaurant</string>
    <string name="eve_cafe">Eve Cafe</string>
    <string name="cafe">Cafe</string>
    <string name="shopping">Shopping</string>
    <string name="eve_shopping">Eve Shopping</string>
    <string name="eve_travel">Eve Travel</string>
    <string name="travel">Travel</string>
    <string name="eve_party">Eve Party</string>
    <string name="party">Party</string>
    <string name="eve_cinema">Eve Cinema</string>
    <string name="cinema">Cinema</string>
    <string name="people">People</string>
    <string name="pp_friend">Pp Friend</string>
    <string name="friends">Friends</string>
    <string name="pp_family">Pp Family</string>
    <string name="family">Family</string>
    <string name="pp_partner">Pp Partner</string>
    <string name="partner">Partner</string>
    <string name="pp_none">Pp None</string>
    <string name="none">None</string>
    <string name="sc_class">Sc Class</string>
    <string name="sc_study">Sc Study</string>
    <string name="study">Study</string>
    <string name="sc_homework">Sc Homework</string>
    <string name="homework">Homework</string>
    <string name="sc_exam">Sc Exam</string>
    <string name="exam">Exam</string>
    <string name="clas">Class</string>
    <string name="health">Health</string>
    <string name="health_sick">Health Sick</string>
    <string name="sick">Sick</string>
    <string name="health_hospital">Health Hospital</string>
    <string name="hospital">Hospital</string>
    <string name="health_check">Health Check</string>
    <string name="check_up">Check Up</string>
    <string name="health_medicine">Health Medicine</string>
    <string name="medicine">Medicine</string>
    <string name="add_more_details">Add more details</string>
    <string name="notes">Notes</string>
    <string name="add_your_note">Add your note</string>
    <string name="photo">Photo</string>
    <string name="tap_to_add_photo">Tap to add photo</string>
    <string name="voice">Voice</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="label">Label</string>
    <string name="item_image">Item Image</string>
    <string name="button_voice">Start voice input</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="i_accept_to_bettrhelp_terms_amp_conditions"><![CDATA[I accept to BettrHelp Terms & Conditions]]></string>
    <string name="profile">Profile</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="read_more">Read More</string>
    <string name="feeling">Feeling</string>
    <string name="none_mood_tags">-</string>
    <string name="notes_label">Notes: %1$s</string>
    <string name="stress_level_label">Stress Level: %1$d</string>
    <string name="energy_level_label">Energy Level: %1$d</string>
    <string name="stress_level_format">%1$d/100</string>
    <string name="energy_level_format">%1$d/100</string>
    <string name="read_less">Read Less</string>
    <string name="logo_with_name">Logo with name</string>
    <string name="update_mood">Update Mood</string>
    <string name="continue_editing">Continue Editing</string>
    <string name="delete">Delete</string>
</resources>