<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <include layout="@layout/toolbar_mood"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/textAddDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/add_more_details"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linearLayoutNotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textNotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/notes"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/editNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/add_your_note"
                        android:background="@drawable/edit_text_background"
                        android:ems="10"
                        android:fontFamily="@font/roboto"
                        android:gravity="start|top"
                        android:hint="@string/add_your_note"
                        android:inputType="textMultiLine"
                        android:padding="20dp"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/mainColor"
                        android:textSize="12sp" />

                    <ImageButton
                        android:id="@+id/buttonVoice"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:padding="5dp"
                        android:contentDescription="@string/button_voice"
                        android:scaleType="fitCenter"
                        android:background="@null"
                        android:src="@drawable/icon_mic" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:id="@+id/linearLayoutPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/photo"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/photoContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/edit_text_background"/>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:id="@+id/buttonAddPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:padding="20dp"
                        android:background="@drawable/edit_text_background"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tap_to_add_photo"
                            android:textColor="@color/mainColor"
                            android:textSize="12sp"
                            android:fontFamily="@font/roboto" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/icon_camera"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/buttonSaveMood"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/mainColor"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/save"
                android:textSize="15sp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>